--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,66 @@
 <!--index.wxml-->
-<view class="container">
+<view>
   <view class="userinfo">
-    <button open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取code </button>
-    <text class="userinfo-nickname">{{code}}</text>
+    <!-- <button wx:if="{{!hasUserInfo && canIUse}}" bindtap="getCode" > 获取code </button> -->
+    <!-- <text >{{code}}</text> -->
+    <text>订单:<text class="ddColor">{{qRCodeMsg}}</text></text>
+    <!-- <button bindtap="clean">清除</button> -->
+    <!--test.wxml-->
+    <!-- <button type="primary" plain="true" bindtap="getQRCode">录入</button> -->
+  
+<!-- <view>{{ qRCodeMsg }}</view> -->
   </view>
+  <view class="table">
+  <view class="tr bg-w">
+    <view class="th">生产公司</view>
+    <view class="th">数量</view>
+    <view class="th ">规格</view>
+    <!-- <view class="th ">编剧编号</view> -->
+    <view class="th ">条码</view>
+  </view>
+  <block wx:for="{{json}}">
+    <view class="tr bg-g" wx:if="{{index % 2 == 0}}">
+      <view class="td">{{item.shengccj}}</view>
+      <view class="td">{{item.shl}}</view>  
+      <view class="td">{{item.shpgg}}</view>
+      <!-- <view class="td">{{item.djbh}}</view> -->
+      <view class="td">{{item.spid}}</view>
+    </view>
+    <view class="tr" wx:else>
+      <view class="td">{{item.shengccj}}</view>
+      <view class="td">{{item.shl}}</view>
+      <view class="td">{{item.shpgg}}</view>
+      <!-- <view class="td">{{item.djbh}}</view> -->
+      <view class="td">{{item.spid}}</view>
+    </view>
+  </block>
+</view>
+
+<view>
+  <view bindtap="getQRCode" wx:if="{{show}}">
+  <image src="/image/add.png" class="add_icon">
+  </image>
+</view>
+
+<view wx:else>
+
+  <view bindtap="getId" >
+  <image src="/image/lr.png" class="add_icon">
+  </image>
+</view>
+
+<view bindtap="goshowImgae">
+  <image src="/image/select.png" class="show_icon">
+  </image>
+</view>
+
+<view bindtap="clean" wx:if="{{count==Number}}">
+  <image src="/image/clean.png" class="clean_icon">
+  </image>
+</view>
+
+</view>
+</view>
+
+
 </view>
