--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -19,3 +19,69 @@
 .usermotto {
   margin-top: 200px;
 }
+
+
+
+.table {
+  border: 0px solid darkgray;
+  width: 100%;
+}
+.tr {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 3rem;
+  align-items: center;
+}
+.td {
+    width:50%;
+    justify-content: center;
+    text-align: center;
+    font-size: small;
+}
+.bg-w{
+  background: snow;
+}
+.bg-g{
+  background: #E6F3F9;
+} 
+.th {
+  width: 40%;
+  justify-content: center;
+  background: #3366FF;
+  color: #fff;
+  display: flex;
+  height: 3rem;
+  align-items: center;
+}
+
+ 
+.add_icon{
+position: fixed;
+width:50px;
+height:50px;
+bottom: 30px;
+right: 20px;
+}
+
+
+.show_icon{
+  position: fixed;
+  width:50px;
+  height:50px;
+  bottom: 100px;
+  right: 20px;
+  }
+
+  .clean_icon{
+    position: fixed;
+    width:50px;
+    height:50px;
+    bottom: 170px;
+    right: 20px;
+    }
+
+    .ddColor{
+      color: rgb(241,36,39);
+    }
+ 
